--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script
+      src="https://kit.fontawesome.com/c44c992f52.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
